fix get tables
