# task11/export/aa72nac418_oas_v3.json
@@ -358,11 +358,11 @@
         }
       }
     },
-    "/tables/{tablesId}": {
+    "/tables/{tableId}": {
       "get": {
         "parameters": [
           {
-            "name": "tablesId",
+            "name": "tableId",
             "in": "path",
             "required": true,
             "schema": {
